--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "parcel-bundler": "1.12.4",
     "parcel-plugin-bundle-visualiser": "1.2.0",
     "prettier": "1.19.1",
-    "react": "16.12.0",
+    "react": "^0.14.0 || ^15.0.0 || ^16.0.0",
     "react-dom": "16.12.0",
     "styled-components": "4.4.1",
     "typescript": "3.7.4"
@@ -25,5 +25,8 @@
     "format": "eslint 'src/**/*.{js,ts,tsx}' --max-warnings=0 --fix",
     "clean": "rm -rf .cache && rm -rf ./dist/* && mkdir -p ./dist"
   },
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "dependencies": {
+    "react-circular-progressbar": "^2.0.3"
+  }
 }
